feat: migrate monitoring spec to internal config

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -106,6 +106,9 @@ spec:
       thanosServiceMonitor:
         enabled: true
       prometheusSpec:
+        additionalScrapeConfigsSecret:
+          name: hm-monitoring
+          key: additional-scrape-configs.yaml
         replicas: 1
         replicaExternalLabelName: __replica__
         externalLabels:
