--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,124 +1,13 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:0X5zZQ==,iv:5mYiBS3tqZJ8bMy9htRnTyLhfF4Eh42sx3k7V77xc6s=,tag:IzBFzplBH+LC51el3JQyPw==,type:str]
-            - name: ENC[AES256_GCM,data:M59kQuw=,iv:iqPmOIDzdnM3vQXgYBpPK01EDXxN/VNfcJfkWegfs4s=,tag:EGjfvHWnFlqPLRll/1h18w==,type:str]
+            - name: ENC[AES256_GCM,data:0Wu6xw==,iv:DyZzWqUgS9Xj8mVY73vwiPwboHRYMinm+SQYFu3yyxQ=,tag:mpMjnsz5yPibkzoL2yu+Gg==,type:str]
+            - name: ENC[AES256_GCM,data:K6BXZ0Y=,iv:SA85gGZQYwLkt+3kNiz+crnczoSLKHDxCFAWknQ43zo=,tag:KxHIFCtnHaUVSIlZfLQ5NQ==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:10NecGPJpg7y6xnC7uuhuPwi,iv:Alk9GH3fTZbm8vf1f3Xlygme5CaknAtK1P7xwF6o1OI=,tag:lae48qgmyibwGTy8boEkJQ==,type:str]
-                  from: ENC[AES256_GCM,data:6lMS74Es5ak9GGLJxpFafH1+pvDP8dCt8nN1,iv:tN+kZeR8043Ss8/LA9WceBYQ/y9tPZWKbEJFpM9MZpo=,tag:Qu++rJzKArpWRL6qUHYLPg==,type:str]
-                  smarthost: ENC[AES256_GCM,data:OBWZf0oNyL6ZqqbL9IWAN3O7JH1Pgv4KZov/fvw7PA==,iv:zxwCtaRu6qCFXT8tRIGVloExzCVmE4Pkj9dSuz3TxRw=,tag:rbT8mNx9NKLKylKW2K5Qeg==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:khiRig==,iv:RK3lUY7XNulPFoMWsDZ0jajUsbK+mGmk60hoL8Kkn2c=,tag:VCg1iMlbvW9pakcZtuO96Q==,type:bool]
-prometheus:
-    prometheusSpec:
-        additionalScrapeConfigs:
-            - job_name: ENC[AES256_GCM,data:jAwuPZeRrb/H2lk/Kg==,iv:RTU/QNJir3r1QMRqIEIkoz+H50Crxx3YJncjyl9kNSk=,tag:D+lUQeVnV7aDTD8KmVJhMg==,type:str]
-              scrape_interval: ENC[AES256_GCM,data:eGUI,iv:d7Ro0MSFi8DEdQ7sP2D6tIVkd2howt4CmoUefeBNgik=,tag:Kb/A2h7gIEkT6yX0Mx6b3Q==,type:str]
-              static_configs:
-                - targets:
-                    - ENC[AES256_GCM,data:m6Nwg6a4/8iKMO+4agaErJM7DrulZsVdXjKPbg==,iv:eaGtf9VfKvFP5qkoJQz+RB3iRtpaHicyfQUrdYX6xiA=,tag:lIeznPBt2ROhlXWTmK34WA==,type:str]
-                    - ENC[AES256_GCM,data:dEvRCik9bSMn/glW0YOCZM4TLzb8,iv:XBY1SnZ688kR7LohHB8OTQKEDyPL8/XBTBXzRzFCGco=,tag:mbSTMJgVpbcvs9FLzVY/zA==,type:str]
-                    - ENC[AES256_GCM,data:isgcq0c9h/n1+avHqb1mPxYUjSp+WDGy,iv:xM80uaKJGMqUZarCShy7Dpe2ZEBeNzMj1QgxZvEivsc=,tag:GgfBD9cEurO819RGTPMn9w==,type:str]
-                    - ENC[AES256_GCM,data:9xtdGBn4bU0gGy/L5pJxz0PPyiXc1Jlz,iv:5Kt3vcsCuSKv41i8WHqHyro2dzIJWGOv6ZzFrV/9eHc=,tag:a7suLEdnlr87E6LdhF2Jnw==,type:str]
-                    - ENC[AES256_GCM,data:Ai8k+HAqvyXh3qSUe1neSYma0O7aK+PlEVfBnK4=,iv:yWbvTTYz+FKDQ26HXLYOR6wLbWr95bPpCr+TQwlUYQE=,tag:FpGpcZWhJIILU8SSBwo8Bw==,type:str]
-                    - ENC[AES256_GCM,data:SURMsCFInBHgIEZm9CzrH0qV,iv:UCEeJe6mFtu7Fx0uC497y7BnGN7FTAlmfwjkiNls90c=,tag:6VaP4RATWtizxYm9kGpdIg==,type:str]
-                    - ENC[AES256_GCM,data:zdQOGu6atWT4VEVIaywhh2A=,iv:18yve38S+QPqYnT5uxSxiqOm/bHgu1CH80xK9stEGHs=,tag:ZNjdNeiJozQtkFZO5PUTZQ==,type:str]
-              relabel_configs:
-                - source_labels:
-                    - ENC[AES256_GCM,data:x56Z8FJ/t156+LA=,iv:Zih18ueck9c8i643UV7Q2910RUAb9s4lJ1GKucu+zrw=,tag:k4DYUoQkJm2ia6WtAgNLdA==,type:str]
-                  regex: ENC[AES256_GCM,data:tAd2ky6m/s9XVO4j3DR4yr71,iv:jnnqkAwikrBtWlPVOYREumnpl6qbo6/VFFM2tFWmyoM=,tag:yJrGzg+GchFwm2CB6WeY2w==,type:str]
-                  target_label: ENC[AES256_GCM,data:YSOxivGbj1A=,iv:Qc3O8miWbKJIWKUOA5O2j1czz2i+A16lRUygjN3wyb0=,tag:3N+0d/nyGBBBDGS6ElAlKQ==,type:str]
-                  replacement: ENC[AES256_GCM,data:32UzU7/d1icvZ23mBkWfkN/26g4uWZ9f,iv:i80JILxJMevMkv9n/4YBwLShRGJHcEdCgtAb7m290cA=,tag:YHl35in+6XOrgYVRxGAVCQ==,type:str]
-                - source_labels:
-                    - ENC[AES256_GCM,data:MGPyefZRGrjqrX0=,iv:2w1KxfiDXNcY+uVOWjGZ0bL8eGUCC5jDEvMWYe4t+hk=,tag:dvMzOfGHvOhf17nu4ThH0Q==,type:str]
-                  regex: ENC[AES256_GCM,data:ucNQnis0KVTIZq5TKnbNw7Q=,iv:RsBUIPU+TzTnOSZWSbMPlVcNqrVc2zWDNGOs+qIpEY0=,tag:SFxLCyMFDe9d+sKbZ5oCAQ==,type:str]
-                  target_label: ENC[AES256_GCM,data:5QjsiXq6UgE=,iv:W5SCBmPTGilxYpif8q+mzZ902yPc8/TQRDN+fPFVoM0=,tag:IRP2sWrpFf422c8UnB5XhQ==,type:str]
-                  replacement: ENC[AES256_GCM,data:NC7/K/FTlhdhFYNWtyksEZVEf/l5Gw==,iv:2PlyolLnZy9X6UOx1L72dGJxQQ89QsuCu4U/0C34kpU=,tag:LkS0pAwAg4CCAqwnV7MqoA==,type:str]
-                - source_labels:
-                    - ENC[AES256_GCM,data:olCG+njybiyIwCU=,iv:8sjz/GBP6ePCaa8Em9tp7fTTcSbCLtNTgfo7yWBiPUo=,tag:0S0aprT5gaw2h7J+xI6scg==,type:str]
-                  regex: ENC[AES256_GCM,data:slarSXA/iFA0/VrJSXyLMKWFwuQjCEcThCJU,iv:vVacc93bniZi0shdJ7a3lBL7YXYKNBJWj+VvwUDm4zE=,tag:xdd2ZcmA2bqNYH1IMaHjUg==,type:str]
-                  target_label: ENC[AES256_GCM,data:IScWt1QnrQ==,iv:6YavAKqzX3/fKeW+1sGlxOk5r8tz0VyqvI/EdzOgSPY=,tag:vlgGmSCPG1mas3opk5ImmQ==,type:str]
-                  replacement: ENC[AES256_GCM,data:NiwD7gk=,iv:30fh9v6/lhMOyS/LYEGqPjZssNJOR0BOAc2Don5CVvg=,tag:QFkUP/L3p1vtg3B6nUJdFw==,type:str]
-                - source_labels:
-                    - ENC[AES256_GCM,data:tIf7tghj+4rVCXQ=,iv:MlCoePozoB7/08vpdhHSL9rybDKDM+oq0OzYHKKVB58=,tag:89lFymMiHVMAl4dPK8qzvg==,type:str]
-                  regex: ENC[AES256_GCM,data:ytZP0xH2VBLrUO9JjFbKQ/ttq1nhz2xc,iv:bNSYhanssEaPTLJp7Rk2276KnPfC9VsGNEk6OefdBXI=,tag:LnPmoAZme+wq7MGKH06/IA==,type:str]
-                  target_label: ENC[AES256_GCM,data:hoJ2k/yipD0=,iv:URRtunCT7He8ZVXzUMUBAKJpo+dblZvjgEnV9fWDgAo=,tag:XtdLYFxlrpeb72XpKCHmHw==,type:str]
-                  replacement: ENC[AES256_GCM,data:EVQ0KG9zMZm/drPqDMTAEg==,iv:ecyPBqea+mA+lLYqUl5xygz5HT57zQ5jNoaVAxKtIpk=,tag:oIEMWg/ZuJ3kySw4PKvw4Q==,type:str]
-            - job_name: ENC[AES256_GCM,data:bf+70yqdYVO8AASr/kwywCV7RNpx,iv:RWt6eRDNgus4NUkThtN4JOEuBiOJrpnSRnLm8yRbQ9I=,tag:/qKwzmxozNbjNFaKlgQWmA==,type:str]
-              static_configs:
-                - targets:
-                    - ENC[AES256_GCM,data:QW2t8YcNpvvwiLzCwampc+AsvmAocx9K15ONjrAO0gw=,iv:u1vhZ9PUKU9jtwXiGshgGrHC5It/z5bCKBS+V4NomaY=,tag:OWeypQxebq7Q9w/LxoUY6g==,type:str]
-                    - ENC[AES256_GCM,data:Tttn2vVgRb4QVDBIyF/S68OP10mS0ZL6i7nYTg==,iv:xKcFLNS/np+3p+QAnIJXT0p2i1TSIds1ivWawoG6TEU=,tag:n3wcEHtRxJtg+Dn+yXzcnw==,type:str]
-                    - ENC[AES256_GCM,data:u5XkdxlcoQAuqqgI58PbJdsA9eXOoddcilgQcw==,iv:mM3Zuh1vgBmoppBRXIjX7Zb6ZIbEwUBuMnmTEK/4ObY=,tag:7iPhjYH3hEYtnkJL4KW0aQ==,type:str]
-                    - ENC[AES256_GCM,data:BNItdtIQhBPH8UxVBjPnE98bkglFrd31TdIl+A==,iv:tKipifQIPik9xq6T6BuzBpTbi2AdV9arrulu4ZUbpiI=,tag:t0cldWZyyr6SEB/sMVQbeA==,type:str]
-                    - ENC[AES256_GCM,data:gdNVsBFesrvbet0bUsCXGxFhxWHaDACZhvpImQ==,iv:Utqs4rzgTFHnFK7R8qniE4WjVgO0IU1L+f0F2ifWs+w=,tag:2Du5wP6I2PLWJ12Bor/lkg==,type:str]
-                    - ENC[AES256_GCM,data:H32NSuHH4ZL2nwWlKJcfubFyVYCoQlOyKGRiuQ==,iv:r+vyQwFlR0IH2pqeKwvQxh+dan21Lo7JcIBV4iADgHg=,tag:LVQnZ8Teh6Eo1u/oDGYrFA==,type:str]
-                    - ENC[AES256_GCM,data:z/92DMvYe/ZA8agr1EW8nLXfZfU+ef86DrvWvA==,iv:oFzcHuPC8aJVOJxuY+FFXKB5U3vVgfFKI4rmQrjQDfE=,tag:PyVKGdn6cBvccTcE9UDEeA==,type:str]
-                    - ENC[AES256_GCM,data:0dEDl6FlMVPJYJCAT4kS6oLCVe7rRVi9cbD4icoD,iv:7A/KeA6YtvY+nKp1cNrQ1a7U+R0VRo99XGB0w6Kp3mw=,tag:IxguOA3h8QpJyjrSTGzhTw==,type:str]
-                    - ENC[AES256_GCM,data:0d7q7J1GfLwEFlUHB/LsH0VJtMBwcVk5UosRxAih,iv:IAiryUdG/XOL+iSjh2xmBh5sf/otUByS/bQLmer5w4w=,tag:FelWIcur3bTspzrMn4opUQ==,type:str]
-                    - ENC[AES256_GCM,data:LDUNR91U6OfH8ZAXywTOdJj4FWT8Vfg5keG0Xjpq,iv:9zz7+A8wJQyoRODLMEtFSm6iB8XEmnlFkcQQQWqK/Zs=,tag:+PBjxD2mtwH3gay9P2h61Q==,type:str]
-                    - ENC[AES256_GCM,data:ChMlmEWTesP7Ho89kdF9D1Q5Yjk7lv0l+g4hd3Ui,iv:MOIJ5ZyeWWIPshzzCv32G7Ad3w6riZov06WDvdc0aPY=,tag:SN1EKH1j8iVfJd/BYgi7IQ==,type:str]
-                    - ENC[AES256_GCM,data:+cVJR+vvSkZ226D4SDgnhYbwdBrINZAW63vmKSO2,iv:2EN2t9GqPrGEoj4jsE7rLzLUtMkb55AhpP3oM30u7eI=,tag:vCgH7mCbNGdwEQSXyWkEJA==,type:str]
-                    - ENC[AES256_GCM,data:mInxnAs0nP0R1pp6YColzZ45DAAmnSZs,iv:iMY+CGAwDxT3Z6e/oRb2vMlKR8AucjZQqz0mLYMK9WE=,tag:1QFbmaOH45mpZTeiQxzxYw==,type:str]
-                    - ENC[AES256_GCM,data:GvoYBBmw6Edp8NrwEjJnKNQMULOEuxby7Ro9ddAIbaK8,iv:BaUdBe8pZ1vgw1bI9KXxcLEukgNek1thtP+hH6HaM5A=,tag:tWtxX3AoWjgdpnk2j1xltg==,type:str]
-                    - ENC[AES256_GCM,data:tor/dWocLfsZXtEUTywKoi6zwinKI1JM+B78ch9nJM9PNAs=,iv:nM7yYSHN0ue3Qwm3/Q4bvrpROJKO1WsPY6+abZzWIcQ=,tag:7G1ReuNc57A7YS/pI3I5fg==,type:str]
-                    - ENC[AES256_GCM,data:RM8cWqZUcmMb8z0LrEI3KBsgvlja6w+Y5qXjF3JXlC0MAO8=,iv:UH5K3kcFD6XTZWYHm051MznbTfWFw+nQplWg7Ww1l0w=,tag:YxHyn+kzkzDS2vI6iNIIpQ==,type:str]
-                    - ENC[AES256_GCM,data:Rf/ICZrnOJl6440AxGbvqQAjrn9xchOGlEmw64rOxxoR6uQ=,iv:3yjiIfBnitscZ4nGRsi1c0Wb1VEE7iCwO3hzWEOvaIM=,tag:RVufP0zOz9/L+bFaG3BG0Q==,type:str]
-                    - ENC[AES256_GCM,data:eM5ZKUOpwlkd0M/HOlqj5uFvqOtTkVXfzQvYLAEyUENE40Y=,iv:s5y8Q2Tu1xMsSPVjnbmU6RPX7NsxlWrLJ/m+7tKCQhs=,tag:bDCvup9XAgasvZ9jfThgHA==,type:str]
-                    - ENC[AES256_GCM,data:LMf6JK52Hs2XFSsSJ0haRUyNMrTV81cr3H8uem8uZYyBcrc=,iv:PJIHICBQ+98dMb8LYxtPNrcmvfBLYvOsROQzUQkQG2A=,tag:qMTenz7gJqsVjjNyf52bVw==,type:str]
-                    - ENC[AES256_GCM,data:bNYHnWcpZukR/YHL5Ho5CiEwgtTylXP086mE69DyvNM+gVIlHw4=,iv:IOrbv7aSyBlKl+tyd5OvNopC4nrM+/xgHYodNVBur68=,tag:xUnXLUl2tVq+3R6ToEWpKg==,type:str]
-                    - ENC[AES256_GCM,data:Oi9IxqlsA72stmJBxbg6qYEU2cN4Gt9R3KPt6j+kIHJy16QoBOT8Kg==,iv:i80piIP8bIe3X6UaC13AqK3oPbXRu+stetAJqFS/sSw=,tag:D4Iesjm1MVt17CJl120zng==,type:str]
-                    - ENC[AES256_GCM,data:n6nQvf+l42aPqyYLfE46dodfvfV7VbY+RDFK5bx2vhOK,iv:Sxv+k6Ikw1iR48rrQsLX8rOPj8bC/RZ9LMAt1Zm+G3o=,tag:ObM02bL3LJcanFQ3yM2rcg==,type:str]
-                    - ENC[AES256_GCM,data:Y90X8irH3Dcu2Tzc/pxM1TUWMjMi1bL8Tll0WsSj99SF,iv:8zZGpoDaxHX+W1hXtJQiuxjkMRsKQH007nMd4gMs/zo=,tag:GRbUwkIx474+Z0SBKZv0QQ==,type:str]
-                    - ENC[AES256_GCM,data:9xQy5i2rfDQ7a8ZbOamqKVsZOKEi0OZLrQ6Zuf70257C,iv:VLLkMCoR8Nm7aXSU6JV7kqzDXznjm/w1YI7srGNUXUY=,tag:mP+c1t2oWaMGd11TmUSM+Q==,type:str]
-                    - ENC[AES256_GCM,data:oj2GQKyokzvrvr+72dkNGWWRye1t5QBl0z2M+HRrz81J,iv:lwyl/k7LlGrCYvSEVnyBktDjGIxBjrShN+WJEbOJD0w=,tag:eOHL/Jg1ZSDQSzV9GNq8GA==,type:str]
-                    - ENC[AES256_GCM,data:yA1AVOAttskWX8GV3pOtiJ3eAIKnz3Q9/zZrzF325tdS,iv:YbUcb7zG8UWI0KNf2arCHBIj7izgk8jD9gr+byUtlBE=,tag:xLYCdz1f9kH2EW5lNaytcg==,type:str]
-                    - ENC[AES256_GCM,data:sR47KU7IHJ1BHbAIR9M9sUG9SPo5ScI0n6WL99tiefwL,iv:wHnJC6Ye3zZRP5juPNlXoNbu7bwAvxzqEA1oEf4dg2Q=,tag:G/XoolZNc8TwUDQLrdF19A==,type:str]
-                    - ENC[AES256_GCM,data:6znOl0ZYNWhAN/Q8q/vuQPRlzTlsyOnlQbBXhAjDxlaL,iv:Xy4CcjM4F0QNRBLBwDNMPN6RiOKa0gSZigopG7sPmk8=,tag:j9NcJuLF7QeSCdM5jwQFZQ==,type:str]
-                    - ENC[AES256_GCM,data:crfI1d7w1tt5wzwINDGUSc3c6m7Go5cJgJ7AiJSqn2QK,iv:vW+/fPwgAxG9uH7GKf49EddjU2DdBofSM5Ci2J6OnnA=,tag:1reRvMtSItSd9ujiaS1RCg==,type:str]
-                    - ENC[AES256_GCM,data:mGbB7Vv3eCImLZek1ZPufcsCBqsARvAxLnT+qHM8Ujh4,iv:rV1zA774bq0Hsg8IZWSa+lSeOcnFTpXxPcq3vDZ4yg4=,tag:r5J988aVb9D+id7fcCwBrA==,type:str]
-                    - ENC[AES256_GCM,data:qkUSgWYR1SNlywReTmZKVWhXLDBhGFR/ZiSewUHfu/jL,iv:MvMQUP1AOnq0yX3wbl3oV8jb1rVSFBaRDEx/IxPRYDw=,tag:azs7p14GwgD6q1aMYUfqPw==,type:str]
-                    - ENC[AES256_GCM,data:c9PCAewXA9PNl22bJVYk04ZkXu7gz35OcumizixEyJmk,iv:dHHdGZ4P80t4RGyIZvQw/2urlq9StrhQVJ1xMhIsOKs=,tag:m5iQQf7Uj7wLEFWXQ6Oe1Q==,type:str]
-                    - ENC[AES256_GCM,data:Kwjdm8lwQxn/m05zaQBvra4+ZfURwtbIgLShNm2CM6G1,iv:ArTbJlmKlC+PAEIBr0Wooc8oEdZB+AoqM+qmOMVUgbY=,tag:4ZDZXGjYKF0u9qib+QXaMg==,type:str]
-                    - ENC[AES256_GCM,data:qosJ0EP5gvVWguCyI2TjsOcmjSoREYd2gwcCElzffoYb,iv:IZ+M8hq52Mo3wxw1ac5vpkRiWxP8xBKjdU3o3WJIvmk=,tag:MWlleATL9MOWH+0JuRr+oQ==,type:str]
-                    - ENC[AES256_GCM,data:oEe3YNHD8nsL+4DghwwUpuaRMNdOyP1TjAfbOBrC0sCS,iv:ZBPWqxz5tHLyNHaxAshhGmJXg3Uvutmnx4rYc13E8T4=,tag:1lJ5WQaA6i9WWwSdykdjqw==,type:str]
-                    - ENC[AES256_GCM,data:CKDz7iqsjNlvuLJcTNcFSlZ5EcEeqau+ybOrltP25zQ3,iv:j7ZpNWM1wZtT6sKEHFy0782XVF715EEWbS6/JEy1M8Y=,tag:xL59eX7q+60JCivWHj0HHg==,type:str]
-                    - ENC[AES256_GCM,data:XHx0KE7sdPzXeS6R4QWeIe4CZ3NHTJnjrOGTGc/S8oGC,iv:bX6au8g7RwnMDpmbRBwDJQgtrKK2WqYkc4iU44HvuVM=,tag:s0WP0ZW9r/gaeJQZ7+RzYA==,type:str]
-              relabel_configs:
-                - source_labels:
-                    - ENC[AES256_GCM,data:sfQfS0/djg6IJsY=,iv:+mOPInCgUQVhIhCI8b/QcqLeXfjL1ys+4k1+TIcx16s=,tag:6PhQfslX4qsvQAVfntK0Ug==,type:str]
-                  regex: ENC[AES256_GCM,data:IvaGyDKCVdDy3OO2OrAWkGmD26a0Rhi0,iv:Uj0mb51UMcdpju647GcuIiTQv29g09/tFO5lHgHqlmM=,tag:BfZ3mfJccBNAVeGYorgaxQ==,type:str]
-                  target_label: ENC[AES256_GCM,data:UKwr19dBjU4=,iv:fjsbocefoJ3T6Fb3qtxLIWgsZKNXPm/6jw1o+tNpj/Q=,tag:+kdJJPqXY8kkWPTUhBEoYg==,type:str]
-                  replacement: ENC[AES256_GCM,data:qafJ+ZCpj5NOGy8T1iXF2gCSS2U3lwDb,iv:w7SYjDS0l9uYkhcCIEWHSF/um/P99Tz/C9bgJEF/SjE=,tag:z1ew9t79k/wvrckP3kn9LQ==,type:str]
-                - target_label: ENC[AES256_GCM,data:YDxN,iv:J87cWQwy4ZsaQUmNRm+Q0Ytb+Zg6kNiB9LnmWTfa+/8=,tag:4755EM3ptHPR+5CGaTr3ag==,type:str]
-                  replacement: ENC[AES256_GCM,data:hhJr2QBaXsFHjqJpEA==,iv:FA5Xr3XlRcx6/A/Y8M/EOgQQbnns0QoO7UeKIi5r4Bc=,tag:OD1/tr5p6j3EzJLiRuhtiA==,type:str]
-                - source_labels:
-                    - ENC[AES256_GCM,data:G2ZWS2LpIE+w5IQ=,iv:HoJ5HXdCsqPSyW+0r7RglMg0ybV4RqHmvbKgSfYWeW4=,tag:ew6APwgai7JLCd1/WKq5MA==,type:str]
-                  regex: ENC[AES256_GCM,data:PiuhMW6UVbe+qZvFbjh07FVYm/+uU7TNAoyg,iv:1Ca1CPPhAL6Vj6SpwS8lJ0dqSPUlkqAPeSoPE+aLSj8=,tag:eg+sKobM2frEzN/UfGSjdQ==,type:str]
-                  target_label: ENC[AES256_GCM,data:eo8NEuKkVg==,iv:eMHR8sm2/LZjUvD3C0VG2Bvqbm+++9HOa6sR1kC5tlw=,tag:nJEAmjfJsK8kCc52U6Csqw==,type:str]
-                  replacement: ENC[AES256_GCM,data:OGa7hg8=,iv:rcP6nEZa15TPruZIPePPvgEoJFeLTvp2AQN5vYKDyBo=,tag:E8ARxdTr4Se9tD1kGT2sng==,type:str]
-            - job_name: ENC[AES256_GCM,data:Eepn,iv:Fi3n+puySSXOKNhR7FgGl0sfronWU+lugfk45biXWTE=,tag:fVOYfkbgKcfl83Nz7ivvBQ==,type:str]
-              static_configs:
-                - targets:
-                    - ENC[AES256_GCM,data:fMhjs3sLTI91QFixnJ2DMOq0qcwJvPFJmTlE+wnWURaj3lQ=,iv:8abApAjSQnGBHioGxC62JUgvw5jvvIL2dRIe4AwYQEk=,tag:Fjd1vge8QI5ez3tY1TR3mg==,type:str]
-                    - ENC[AES256_GCM,data:VHthW8fRde3Aa7Nkm0KyTYLk9cBTkfc+IQHRpy/7oNG/OW8=,iv:D/sJ7SFPYoFM4E5cm40rpHBE/rgn31dtapraRyavwJY=,tag:GFAhgS5BVHB28mIbEIxaaw==,type:str]
-                    - ENC[AES256_GCM,data:6iCAUkRQxBW6fwEnDORT+y0R2IHtaErFO5ss8T4lzw2PtVE=,iv:lGb2gXs6oQfROVBYpD+lucaZ+va/dTUyMsZimJg63f4=,tag:jm1uCfEb2mCz/M5H4BOjzA==,type:str]
-                    - ENC[AES256_GCM,data:5V/E9kN5ZsAdIzNTN+CkX1S1cueYaSShRCNmX3S4MIihzfqhTG8nEg==,iv:0VRD4ZibDQwFTNqJp97Houc8Epqzl7F4GoCs4QfRRuY=,tag:T7Kb+lj3dmnSCDbrCqaHCA==,type:str]
-            - job_name: ENC[AES256_GCM,data:HC+z,iv:7qf1ITQyVAXcvldk6zyB6vKTjkb6Jq0jMyOLcLjAR10=,tag:si+YlJTG5BU3OSs+QjukNQ==,type:str]
-              static_configs:
-                - targets:
-                    - ENC[AES256_GCM,data:T9Sa9RlIkCYZZ4VU4uACktsk,iv:AUcemEED7kiaEU9h3UXkcOAiY6gfAD+jMqjzv6r6KYM=,tag:Z61i7MGLrs0+3671PAmilQ==,type:str]
-                    - ENC[AES256_GCM,data:50LkrpoYpt5YcTE8MuRzXos=,iv:G91IYQ6yoH8FtoTAcq7M1V82QFo0oCVKb1uuUlfDsvw=,tag:Z375EzAXBiFVVoRGMb4nmg==,type:str]
-              relabel_configs:
-                - source_labels:
-                    - ENC[AES256_GCM,data:3FciWncx9izligA=,iv:31P2IrvqBu3EXxgQ/W9JOufM32K5D6niefFKUZk4PxA=,tag:4sD8SWv88273VDaUgznLKg==,type:str]
-                  regex: ENC[AES256_GCM,data:DPI4G8pQYXwDbD/RBQMRZsKd,iv:BebcrV3dsW5eUaV075HNtB09hhvOryPAaXqzUTmsQCE=,tag:8ZrxPRGqHbH18OAk5nQUdw==,type:str]
-                  target_label: ENC[AES256_GCM,data:NsuNx8c5FHI=,iv:mU1Ic7hu5R2DElsDzvZxqcTj/arxGVlroh2Fz7os8II=,tag:0O+WCLWmlsZThqhe5Ktceg==,type:str]
-                  replacement: ENC[AES256_GCM,data:uwC4wT6Q1Ec6QFgvYo9kfop6aekq+dIb,iv:uXP53dGgmH/WKg9fNgWNvWlriqq2qfAPJZFL/t84i+I=,tag:FYVw3Y0wrOxjKpxxIrbtgQ==,type:str]
-                - source_labels:
-                    - ENC[AES256_GCM,data:7XHXjy/c0vVBKvg=,iv:C0yjJttoSPAehtRi/18uMO15Zl4GsbVSquBi2+/WAsA=,tag:8ilhVzeWZLMPL9xQLQju2Q==,type:str]
-                  regex: ENC[AES256_GCM,data:+p90HPTKOYqFQ/7GO//DQQw=,iv:hunz2uc/vlhnr151tEHUaG5deibYiB4GHhZnx3wKu2M=,tag:zSjjgy8OgYsDzvTMp4zE3g==,type:str]
-                  target_label: ENC[AES256_GCM,data:FRLl8RlhgOg=,iv:ziDwpPa2XAOBW3j17U2Y6QmhJj7K7qIKeMQUY6XyX3M=,tag:IjZdatVcWMv0uWCMu4ZIWg==,type:str]
-                  replacement: ENC[AES256_GCM,data:LpyijV/mRico7gNLymTS1Mwf/QEPdA==,iv:a0C0lqGWKoKJGX7wnRoV7HHCMiB0/3in0ppcT8ttBBw=,tag:039MPFkmypxPlbWgNC44CA==,type:str]
+                - to: ENC[AES256_GCM,data:925e5wDctfQvIT/gCPfFdkH1,iv:bA8A14PLdflUAj0JL8VnqCbw/Dn7YgvFXt0Dbs6fr74=,tag:ZJC/9/f5tzj1Difg2e4BoA==,type:str]
+                  from: ENC[AES256_GCM,data:FghjKgBN4BRKdycgdlznMlIMs+mazXsMAe1N,iv:VSUN12WS5K/5EuoPj/LQQKauCSAqQ8mpPzvFL45Nvxo=,tag:7o+LaxxcukhD1zrYkdpYYA==,type:str]
+                  smarthost: ENC[AES256_GCM,data:7FQg0VvB8u4XuQyMx853hiu8uTZ3vMiW5msrRuo1lg==,iv:YjJeaI/hv/fcVxYd3b0HHj/4ji30NDm6UIkp66vk3aE=,tag:kqMXjSTBMUGK/PJShXAOEA==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:Jugzdg==,iv:PqfBPYoa1sDMtcLeEEdzuJ/GR1OA+L7XtKgvW8ODgsA=,tag:vPBHuxMrTnL4jGfdp8Wu9g==,type:bool]
 sops:
     kms: []
     gcp_kms: []
@@ -128,14 +17,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUzE4ZmxHY01IbFVlZHNU
-            NmtTWnA1V25CRXBGUWtDcjRNQ2lsMkZrM3hRCkVIUUxpak1TMUZtWUZpUkVqUjc1
-            aWpCQXNQcXZJcGtOTUtFVlpaZUo4elkKLS0tIDQyZTYxOUg5KzJiM2FtOGVMOHhh
-            UEVHeVRCb3pUeXhMSEJqY0hHODUyaTAK36ZkCbdWLn7sBE3wDRxKTdtdJtcu1wZu
-            uzOPbRXicQb3dSyrEbw7qO5asdoTjdHFX5xhyaB6hb7gWZJ5cxPMzQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqZTlPQlFPNnRMcThLaTZ5
+            eHVVSTcxTTdmS0ZoV1ZwVmFTYjlCdzFObzBnCjVMZWRwTE52T3A0SS9zK1k2enV2
+            UkI3Qjd4cXIwN0dWMW5kTlM1bk9CQWcKLS0tIEhiQmJIRFlrSzRNUW1PSkw2dHRU
+            Z3Zid09EdE11ckFZWThzcHpTdWFRaUkK44jBjbQv+fOBv4mHcLXlh9LfnbDSINbL
+            owfjOpshMBA6MR+a8MPeVtM+b4068+ih27UPRxqTPzNvtlWwF2oVHw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-22T11:46:55Z"
-    mac: ENC[AES256_GCM,data:HgTfwFT5rwWf8DJ4+Hq1EOazyV8dhzJPVT5w5Bd/07f/7okFRty4s+70CzfgCu1W+oXwvxp/lVnLYIvXZ4XjZqyxwcFYD5EcnlL8WT7VRXnQvH3cJXjAbXmOCmhK4OBfQVgrY7HNP2lM+XSe5plkHJf6S95DJQSlUlQvorsmQx0=,iv:jKSL2mM1sAoeZCZ3vslNnu+bkUW1xin/S2yJd9k7wKk=,tag:aye8eOa8OzXhLvf8iiqk/Q==,type:str]
+    lastmodified: "2023-01-23T05:16:44Z"
+    mac: ENC[AES256_GCM,data:KhQ9OdKfVCo3eZkS8V4mLWYMN1PlI++5p9ZO1+YuTo3iHWsiJW7GK1TpyF0eE/wCCO0yiucRXU5Zko4Q67gcVGddb6nlxLD7L9ZV+N2m7hI9MpjyCYx3/xn3UtKPYhRkEUmEyVWQpV+KjStBwFQx9ZmczF2L8OmUhFpT7WKnPEs=,iv:lqJ/K2xAZzvRxLe/d8xe9ARLy93J+3ar46kVA1gtPR8=,tag:DV6SwrENhGeqqphLATvg3A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
