fix: enable additional scrape config

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -107,6 +107,7 @@ spec:
         enabled: true
       prometheusSpec:
         additionalScrapeConfigsSecret:
+          enabled: true
           name: hm-monitoring
           key: additional-scrape-configs.yaml
         replicas: 1
