feat: add gitlab-runner for lrz

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ clusters/production/minio/values.yaml
 clusters/production/monitoring/grafana/secrets.yaml
 clusters/production/monitoring/kube-prometheus-stack/values.yaml
 clusters/production/gitlab-runner/secrets.yaml
+clusters/production/gitlab-runner-lrz/secrets.yaml
