--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -45,3 +45,21 @@ spec:
     provider: sops
     secretRef:
       name: sops-age
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: gitlab-runner-lrz
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: ./clusters/production/gitlab-runner-lrz
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+
