feat: try grouping Update notifications

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -49,6 +49,12 @@ spec:
               matchers:
                 - severity = "info"
               repeat_interval: 48h
+            - receiver: "email"
+              matchers: 
+                - alertname ~= "(Normal|Security|Proxmox) Updates Outstanding"
+              group_by: ["alertname"]
+              group_wait: 5m
+              group_interval: 10m
                
         inhibit_rules:
           - source_matchers:
