feat: group required reboots

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -55,6 +55,12 @@ spec:
               group_by: ["alertname"]
               group_wait: 5m
               group_interval: 10m
+            - receiver: "email"
+              matchers: 
+                - alertname =~ "Reboot Required"
+              group_by: ["alertname"]
+              group_wait: 5m
+              group_interval: 10m
                
         inhibit_rules:
           - source_matchers:
