--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -57,7 +57,7 @@ spec:
               group_interval: 10m
             - receiver: "email"
               matchers: 
-                - alertname =~ "Reboot Required"
+                - alertname =~ "Reboot required"
               group_by: ["alertname"]
               group_wait: 5m
               group_interval: 10m
