--- a/clusters/development/istio-base/gateways.yaml
+++ b/clusters/development/istio-base/gateways.yaml
@@ -18,6 +18,25 @@ metadata:
   name: ingressgateway-internal
   namespace: istio-ingress
 spec:
+  interval: 15m
+  chart:
+    spec:
+      chart: gateway
+      version: 1.17.1
+      sourceRef:
+        kind: HelmRepository
+        name: istio
+        namespace: flux-system
+      interval: 15m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    force: true
+    remediation:
+      retries: 5
+    crds: CreateReplace
   values:
     replicaCount: 2
     autoscaling:
