--- a/clusters/development/istio-base/gateways.yaml
+++ b/clusters/development/istio-base/gateways.yaml
@@ -44,3 +44,21 @@ spec:
     service:
       annotations:
         purelb.io/service-group: acme
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: EnvoyFilter
+metadata:
+  name: proxy-protocol-internal
+  namespace: istio-ingress
+spec:
+  configPatches:
+    - applyTo: LISTENER
+      patch:
+        operation: MERGE
+        value:
+          listener_filters:
+            - name: envoy.listener.proxy_protocol
+            - name: envoy.listener.tls_inspector
+  workloadSelector:
+    labels:
+      istio: ingressgateway-internal
