Revert "remove stats from gw"
This reverts commit 026c51312ad06ba7afa732e7c379c804d5c2869d.

--- a/clusters/production/istio/istio-gateway.yaml
+++ b/clusters/production/istio/istio-gateway.yaml
@@ -19,6 +19,7 @@ spec:
         - "pki.api.hm.edu"
         - "eab.api.hm.edu"
         - "meet.hm.edu"
+        - "stats.it.hm.edu"
     - port:
         number: 80
         name: http-acme
@@ -48,3 +49,4 @@ spec:
         - "pki.api.hm.edu"
         - "eab.api.hm.edu"
         - "meet.hm.edu"
+        - "stats.it.hm.edu"
