--- a/clusters/production/istio/istio-filters.yaml
+++ b/clusters/production/istio/istio-filters.yaml
@@ -19,6 +19,24 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
+  name: proxy-protocol-internal
+  namespace: istio-ingress
+spec:
+  configPatches:
+    - applyTo: LISTENER
+      patch:
+        operation: MERGE
+        value:
+          listener_filters:
+            - name: envoy.listener.proxy_protocol
+            - name: envoy.listener.tls_inspector
+  workloadSelector:
+    labels:
+      istio: ingressgateway-internal
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: EnvoyFilter
+metadata:
   name: secure-headers
   namespace: istio-ingress
 spec:
