--- a/clusters/production/istio/istio-services.yaml
+++ b/clusters/production/istio/istio-services.yaml
@@ -143,6 +143,23 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
+  name: stats
+  namespace: default
+spec:
+  hosts:
+    - stats.it.hm.edu
+  gateways:
+    - istio-ingress/gateway-internal
+  http:
+    - route:
+        - destination:
+            host: grafana
+            port:
+              number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
   name: workaround-to-renew-certs
   namespace: istio-ingress
 spec:
