--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -1,49 +1,26 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: grafana-admin
-    namespace: default
-stringData:
-    admin-user: ENC[AES256_GCM,data:/ZfGWIjqHA==,iv:2skYmT8W4SJ18l7viI9QJd4+X1ORz9fVIw3V4Ob2adg=,tag:rKD9ftUyCB5ejhe5NxQS1g==,type:str]
-    admin-password: ENC[AES256_GCM,data:xKevRMk=,iv:CXcn7GdRI10bYrnJYbjmv87bQn8sUWsPk2FxQfPJRCA=,tag:c6Kk0dl9n7MeuYA2gf+Zng==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
-          enc: |
-              -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6SHpYdFRaaVF5c3FhbjJJ
-              a3JJTWZ4UWJvbFdKdlRONDB6eHZlMUs0SzBvCjdmWjNEZGtmK2NsemtVazRRVko5
-              T3EwYndDNEw4WVBJRWJGV0l5ejNMdXMKLS0tIHlqYm1yY1FHSUk5NlNYRVc0MGNi
-              SjRVUXZvdUlkNFNZUGZkR2EyWWpIQ2MKDj8EBbBnorrU+v9yBw8C73QBhwn2Ki1m
-              wxCfuAKtQjh5cJIJsFNCgoPZzJS9cROH4fPga05Sk/OKdSW4OEFMfQ==
-              -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-10-21T11:20:19Z"
-    mac: ENC[AES256_GCM,data:9eeqHUgi5XfBxK7cXdHpfh85PCeKUtluzqYDbfvZ+5Lv1X1nb16fHTYZe93wOlURdgjZfsmiKJ2VVRqDaMFawAGJHVKT9eu1hxbaO/RmNJ6yM9yanA56e+4ihTwH6cbQ9pXe8WotZC5JvIKtofeKj7IfYF/+E3+bLxBQDfjgHQs=,iv:CUPoCqwgZL6NpnjCe8JS04RiKoFmNNkxXHDFTHdjaZs=,tag:QvmKLyH8PPnebVfWMDRA+g==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
----
-apiVersion: v1
-kind: Secret
-metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_DATABASE_USER: ENC[AES256_GCM,data:r7f4OQSb3w==,iv:y0Z7YO5W3tFVMo5XUWWfCK9MAPq6sZnpy5GvKSg+ZXY=,tag:v8AZIbLMGShHO0NtErd5OA==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:B9r+wyLprw==,iv:gpPPTQpY5Q1NH6mN75nQDdX9l4qOR+EWbepIF2W+5G0=,tag:/nxvSTnfDyw5LLSC6xSwwQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:n0apGeGc,iv:dMgVSZ6HEIOfYONaRh29GAFoxkHrI9YO0k6tVCLi8Bw=,tag:mfczFkx3Nt8lBEeq1zmrag==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:ZkUhbA==,iv:cA6OoM4s1e+A2cXr98bcT8iAg2xoztZl11Nqts47x90=,tag:qPIgQjcundKFdrcXh0EaEA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:VU8C97s=,iv:55RkxsZDcfiG0vSAYiB0LR2klZVYtrX9/r0ziASxpBc=,tag:dXo+iO1juukmdr2o+0huhQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:o3syYsT01Hv2sN6hZyJFLZcmD3QDbWkaKNs8wp4=,iv:WrYvUwCtloQ5rwAHF9W78SFk17HG/hOiL6Z73B9cLXI=,tag:2mcGs5HlgWxQHmxLvzfiPw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:OmI3SlMoFlDbtWW5VEN/Oj4OiiTf4LnM76dT7kccmABujLXz,iv:bRaEuiSAdwKD8IBNAHwCOWjeO+O1CRGDfN1OcqTEwkQ=,tag:IKaM0LUKVSDGUqVl0JruYg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:VBa8XB3rUFQCccYDSKq5a/CoU7w=,iv:v4suyXZlGcUcvv9vqxciMVzxsaRBydJLa7j9GoEVRjo=,tag:VCFsgVXMS9UxzMQiG5m9HQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:8buzMdToAZ08lZ6gI83dyy1rabNdqpqeXxs1jlMWejicWANBfjnP9+Hp8hJG,iv:wL/1iA/VIoKWtqFjWc8vTIJMaR5EREAadHfF+Up/rUo=,tag:z4PbkIqfeZOBhYqBzrxwNw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:K6CccTRDI5AjDLKnm79X7362yH9begvg8rhhtw7pIqmpSnNReZSmigI=,iv:JLHLX+tnDF1Lw9mWwV3FFLj1sZ2/S+vt3o79WVkilcU=,tag:pibnvCSUpxXgrVq8ESXJ3Q==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:JzkQerbVdviIyIIhjqsFWjXRkCie6KpehZa75Hfr3YrG08Rpfu2gysP29m4=,iv:CEOtMQfVCN7gg4N6h21R8z7WhujnQRvFaDDhQUTTmPo=,tag:hTTL3y3MgWiqA7lVMCmj+Q==,type:str]
+    GF_UNIFIED_ALERTING_ENABLED: ENC[AES256_GCM,data:IbZAHA==,iv:msJ/pefWIYW0YZtlMV+6gw3wD4pjKsZA2aLtJGHPN6U=,tag:v2MjHIjbOA96Qqhf9PSkHg==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:AogDCQ==,iv:GeJXtNdXyhaAHCD4I4TxuvgLZ8XScLdHT6n1uFBHFEw=,tag:RBtl6OPXTh2QjIuXPPZFng==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:oFvywQtVpcV6LkWclSs=,iv:5hEqhKbTmi1egLVgmrdtj4SZdBpsKJOrryRtosWUUTk=,tag:Okt7PBjTY+9l5weXg6AMLA==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:/s8iTWFtkmfCNntgRjY=,iv:YXBoyrwXYFWmxNrIRZZCMghxhCQbUogHLAypQIM9Y8Y=,tag:SCWD2uafAoU6//to4WPwMA==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:X+t2lvJ6LA==,iv:8R7KIJhyJu7+sesHj42f+tnvF1zHGtbOHHFBvvRldPs=,tag:NZqO6nh4TcE4jZusaaW78A==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:Ay0vHQ==,iv:axQgVIdmUN+bGRmPFJ4cFw6Um0thOEPELtvtqm1EGxE=,tag:WSQJCRf8vU68DUl6prwtjQ==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:hOF1gOQiGQ==,iv:2zrPCovkxBED46LDD+Gt7/Ybo/sBM7Gu9u4Oc7M7Aic=,tag:DmyICc+AjS4m2q5JSjPXqw==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:BJOVy44QOw==,iv:hJv0ab3Qdh9+dgpCfCB3NkKePpzM08jdeQlHygDPn4Y=,tag:a391Etby9TP8anaUT65w7g==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:YjgFqWhJ,iv:zVzd6ow00k4tL6ck6hcYzOFSADqAPe0TLimD/Es3AMo=,tag:Pye8slFdj+gJLpbnZYuwAA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:ZgL+EA==,iv:bLOrJqnEpQc2+ddcXNi81XL96obq3Iau8a30mxvZlBs=,tag:i/71HDblZwrAvUCXAGhwVg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:pERzVO4=,iv:pThyFSvXCC1aofrp8FTXfRWK94HXyBtC0Nc1hQDXTj8=,tag:xEE2kOqPynk3+BuJE4Er3g==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:A71KuQG0OZLBwyBVw4xtYe4myrQLWn/PFhbwCIA=,iv:KxdaZKDRYdltt9sThI6J5otUI9DLZac0d+GsBRSoV30=,tag:AxeJQNlxMxmIdRYTa70Czg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:VbZUWN/Qg1+w6Ow35wHD+RWSJ8i0OEb0ovlDfpP2fVGEhv+s,iv:FMMWtZ6P4m8VSqGZNaNV+YcJWs4M04hV39ZcmGGS+Po=,tag:Vr4Gy0k9D5BbKjV3A1AroQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:P0p7fYIU4e45Yfqn0JBMXVl9chA=,iv:Htb/suw7Yveq1DV/ZXnySLjE7MIl0HaDCOoxhL/7IGY=,tag:KRSiJJE55DU9cdvlLu7vcg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:WLWKQ2xZjZZvQwygn3ltvtaJI3VcqZbrvWYLll2YM0P8ibw+HV55+nyOcekP,iv:gpfU+0PAJQgc9tA1ula8tpb1pNDFyRNqPdzRK0+xw/0=,tag:Hm81LH6kMdCaQaGmqHFgaA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:3TpQHI5Rxp9Rlvcf+9/91mnH6mkTdREtoRSMiFX5lfLCzh0QWGNY5a0=,iv:v/CZ1w2IPr1xuQlQrxqlQpsC1yKA0ZaMvGaKabxU6hQ=,tag:7zmsEnQiH8mxzQubO+30bQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:drcNWAFzmF7P/6tXqvgdVWmXzst5i6eyfnYtksBgkyqAS+CrgByeDeG1Ync=,iv:AA+e7cwrQfcqyEIoCEMMmEnb4OqV3pMVjsDtZYZe2H0=,tag:CTB/qpTUNU3Kf+A+Iobtww==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -52,15 +29,15 @@ sops:
     age:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
-              -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpalBXVXpINzJhOG5uejVq
-              T0FTdHhvL1htcHFaUmY4eUxBQ3ZMcU5sZlRnCjdkOXJMZ0tpSEJYVVVnZHF1VzFL
-              NXIycEJyT3FyL3VVMTRWKzRlVkp6NmMKLS0tIHllNW90OFhITE40R3crVktkbEFu
-              VmJkMEpmL0REMStORDFReFM2SFZ0ZTAKC9KThKGmoCXx2EgBp5Nn02rswqXJlmlT
-              Q0rMDYIS5CMT8E281/rpDe4eKLQ2KMpjE7jMJPti3N4kzSEN3z5jiw==
-              -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-11-01T16:41:23Z"
-    mac: ENC[AES256_GCM,data:nwM6QYU74Y5b/VwK66vfy5L5fRxko6M6BTn1VbuDTkFLsW98NEvV7xR37D1/qBzezo2zmX5WaJouGGBNRhPXA7st+305jl/h69CcGTHEMRzCXGe2AGnw806mMbUW4mHIs2EagwXEEYRsHlKBrTsmD5lD+7PsHJnRWvXnFGRhIc4=,iv:BoDjbXgp8pzSsB/NPHCx9YuRMw6R8nVqeho2O87QAsI=,tag:5N20DmZAGQKA/ofQTI1jPQ==,type:str]
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzdkFNQ0hDL3FkMXZSQm4y
+            SFhISVV0anFnUDdiRmpjU1gyR2IwSUFpL3hRCkQ0TjhkRGgzTlNqNEpsaWRHU004
+            eGVFVVZzbVRkamFnRm1wR2hhbkIxZkEKLS0tIGlia1Y2WU9oSFM1K041V1NpaC80
+            THpFelgvL2cvZmZqZ1h2V2xXMjE0bUkKA9SrcZ99lm3sx5rkr4+ka/KpVZ6K8FZP
+            06Zm1geaBB3gbR/Kz0sIUnrWfxN9hysZyAZwwA8MD837atQkcG6GjA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-03-09T17:38:59Z"
+    mac: ENC[AES256_GCM,data:M8UOUCuAGhBYw68ixxTuzTpzhcjNZxM4LRNNb8xNnznM91uYlGPeVtG2giNpxHn6u7P7OUxZMEuqmBzqQ7Fd+OMQudC0GriEpbw/XvppVZ4Fgk+pHBk7rrLrJbMtK6lmJD7yLvZnEeXG57UUDSs8OrC4ea54PnEyKS1p84QyxW4=,iv:zBz9yGtt0kNPFq3tJY6RRoNm6BR2oPWDkZ6BsVCIS4k=,tag:27NjlH3mdnFRT0MYEBkaTg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
