feat: enable image renderer

--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -32,6 +32,8 @@ spec:
       pspEnabled: false
     admin:
       existingSecret: grafana-admin
+    imageRenderer: 
+      enabled: true
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
