feat: try enabling unified_alerting ha

--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -34,6 +34,13 @@ spec:
       existingSecret: grafana-admin
     imageRenderer: 
       enabled: true
+    grafana.ini:
+       unified_alerting:
+        enabled: true
+        ha_peers: grafana-headless:9094
+        ha_listen_address: ${POD_IP}:9094
+        ha_advertise_address: ${POD_IP}:9094
+
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
