feat: enable capturing

--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -37,6 +37,7 @@ spec:
     grafana.ini:
        unified_alerting:
         enabled: true
+        capture: true
         ha_peers: grafana-headless:9094
         ha_listen_address: ${POD_IP}:9094
         ha_advertise_address: ${POD_IP}:9094
